--- a/.github/workflows/tag-from-commit.yml
+++ b/.github/workflows/tag-from-commit.yml
@@ -9,8 +9,10 @@ jobs:
   tag:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout with PAT
+        uses: actions/checkout@v3
         with:
+          token: ${{ secrets.PAT_TOKEN }}
           fetch-depth: 0
 
       - name: Get commit message
