--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,77 +1,59 @@
-name: Launcher Build
-
-permissions:
-  contents: write
+name: Build and Release
 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - 'v*.*.*'
 
 jobs:
-  create-tag-and-release:
+  create-release:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.get_version.outputs.version }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Get version from package.json
-        id: get_version
-        run: |
-          version=$(jq -r .version package.json)
-          echo "version=$version" >> $GITHUB_OUTPUT
-
-      - name: Create Git tag
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag ${{ steps.get_version.outputs.version }}
-          git push origin ${{ steps.get_version.outputs.version }}
-
-      - name: Create GitHub Release
-        uses: ncipollo/release-action@v1
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          tag: ${{ steps.get_version.outputs.version }}
-          name: release ${{ steps.get_version.outputs.version }}
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Create GitHub release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
           draft: false
-          prerelease: ${{ contains(steps.get_version.outputs.version, 'beta') || contains(steps.get_version.outputs.version, 'alpha') }}
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-launcher:
-    needs: create-tag-and-release
-    runs-on: ${{ matrix.os }}
+    needs: create-release
     strategy:
       matrix:
-        os: [macos-14, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+          node-version: '20'
 
       - name: Install dependencies
         run: npm ci
-        shell: bash
 
-      - name: Build Project
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run build
-        shell: bash
+      - name: Build Electron App
+        run: |
+          npm run build
 
-      - name: Upload build artifacts to GitHub Release
+      - name: Upload Release Assets
         uses: softprops/action-gh-release@v2
         with:
           files: |
