--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,32 +3,31 @@ name: Build and Release
 on:
   push:
     branches:
-      - main # Déclenche sur un push vers la branche main
+      - main
 
 jobs:
   create-tag-and-release:
     runs-on: ubuntu-latest
+    outputs:
+      TAG_EXISTS: ${{ steps.check_tag.outputs.TAG_EXISTS }}
+      VERSION: ${{ steps.get_version.outputs.VERSION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Récupère l'historique complet pour vérifier les tags
-
+          fetch-depth: 0
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.12.0' # Version spécifique pour la reproductibilité
-
+          node-version: '22.12.0'
       - name: Install dependencies
         run: npm ci
-
       - name: Get package.json version
         id: get_version
         run: |
           VERSION=$(node -p "require('./package.json').version")
           echo "VERSION=v$VERSION" >> $GITHUB_OUTPUT
         shell: bash
-
       - name: Check if tag exists
         id: check_tag
         run: |
@@ -41,7 +40,6 @@ jobs:
             echo "TAG_EXISTS=false" >> $GITHUB_OUTPUT
           fi
         shell: bash
-
       - name: Create and push tag
         if: steps.check_tag.outputs.TAG_EXISTS == 'false'
         run: |
@@ -53,36 +51,35 @@ jobs:
 
   build-and-release:
     needs: create-tag-and-release
-    if: needs.create-tag-and-release.outputs.TAG_EXISTS != 'true' # S'exécute seulement si un nouveau tag a été créé
+    if: needs.create-tag-and-release.outputs.TAG_EXISTS != 'true'
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.9.0'
-
+          node-version: '22.12.0'
       - name: Install dependencies
         run: npm ci
-
       - name: Build Electron App
         run: npm run build
-
       - name: List build artifacts
         run: |
-          ls -la dist/ || dir dist\
-        shell: bash {0}
-
+          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+            dir dist\
+          else
+            ls -la dist/
+          fi
+        shell: bash
       - name: Create GitHub release and upload assets
         uses: softprops/action-gh-release@v2
         with:
-          name: Release ${{ steps.get_version.outputs.VERSION }}
+          tag_name: ${{ needs.create-tag-and-release.outputs.VERSION }}
+          name: Release ${{ needs.create-tag-and-release.outputs.VERSION }}
           draft: false
           prerelease: false
           files: |
