--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         shell: bash
       - name
 
-: Build
+  Build :
         env:
           GH_TOKEN: ${{ secrets.github_token }}
           # Décommentez si vous avez des secrets pour macOS
