--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,25 +41,23 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 18
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.x
+          python-version: '3.x'
       - name: Install Dependencies
         run: npm ci
         shell: bash
-      - name
-
-  Build :
+      - name: Build
         env:
           GH_TOKEN: ${{ secrets.github_token }}
-          # Décommentez si vous avez des secrets pour macOS
+          # Décommentez pour la notarisation macOS si vous avez des secrets
           # APPLE_ID: ${{ secrets.APPLE_ID }}
           # APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
         run: npm run build
         shell: bash
-        timeout-minutes: 15
+        timeout-minutes: 20
       - name: Lister les artefacts
         run: ls -la dist/
         shell: bash
@@ -69,6 +67,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
           upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: dist/twitchapp-${{ needs.create-release.outputs.version }}-${{ (matrix.os == 'macos-14' && 'arm64.dmg') || (matrix.os == 'ubuntu-latest' && 'AppImage') || (matrix.os == 'windows-latest' && 'portable.exe') }}
-          asset_name: twitchapp-${{ needs.create-release.outputs.version }}-${{ (matrix.os == 'macos-14' && 'arm64.dmg') || (matrix.os == 'ubuntu-latest' && 'AppImage') || (matrix.os == 'windows-latest' && 'portable.exe') }}
+          asset_path: dist/TwitchApp-${{ needs.create-release.outputs.version }}-${{ (matrix.os == 'macos-14' && 'arm64.dmg') || (matrix.os == 'ubuntu-latest' && 'AppImage') || (matrix.os == 'windows-latest' && 'portable.exe') }}
+          asset_name: TwitchApp-${{ needs.create-release.outputs.version }}-${{ (matrix.os == 'macos-14' && 'arm64.dmg') || (matrix.os == 'ubuntu-latest' && 'AppImage') || (matrix.os == 'windows-latest' && 'portable.exe') }}
           asset_content_type: application/octet-stream
