--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
         timeout-minutes: 20
       - name: Zipper le répertoire portable (Windows)
         if: matrix.os == 'windows-latest'
-        run: Compress-Archive -Path dist/TwitchApp-win-portable -DestinationPath dist/TwitchApp-${{ env.VERSION }}-win-portable.zip
+        run: Compress-Archive -Path dist/win-unpacked -DestinationPath dist/TwitchApp-${{ env.VERSION }}-win-portable.zip
         shell: pwsh
       - name: Lister les artefacts
         run: ls -la dist/
